[package]
name = "rsdb-patcher"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["dep:thiserror"]

[lib]
name = "rsdb_patcher"
path = "src/lib.rs"


[dependencies]
roead = { version = "1.0.0", features = [ "byml", "yaml"] }
rustc-hash = "2.0.0"
thiserror = { version = "1.0.64", optional = true }
